# fixed-ratio-trading

./: .gitignore  COMPREHENSIVE_TESTING_PLAN.md  COMPREHENSIVE_TEST_FIXES.md  Cargo.toml  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_OPTIMIZATION_COMPLETE.md  DISTRIBUTED_COLLECTION_ARCHITECTURE.md  Dockerfile.solana  Dockerfile.solana.x64  GITHUB_ISSUE_31960_WORKAROUND.md  KNOWN_ISSUES.md  LOCAL_TEST_DEPLOYMENT_GUIDE.md  POOL_FEE_UPDATE_REVIEW.md  README.md  REFACTOR_COMPLETION_SUMMARY.md  RepairExistingTests_Plan.md  SWAP_FEE_IMPLEMENTATION_PLAN.md  SYSTEM_HALT_RESTART_PENALTY_TEST_PLAN.md  TEST_REFACTOR_PLAN.md  check_wallet.sh  create_sample_pools.sh  cu_measurement_report.md  deploy_local.sh  deployment_info.json  monitor_pools.sh  pool_pause_refactor.md  prompts.txt  run_integration_tests.sh  shared-config.json  start_dashboard.sh  state.json  system_pause_refactor.md  test_browser_connection.html  test_fee_call.py  test_token_creation.js
FixedRatioTrading.Dashboard/: API_DOCUMENTATION.md  FixedRatioTrading.Dashboard.sln
ai_notes/: Delegatefixes.md  SwapFeeChanges.md  SwapTestNotes.md  delegate Accounts Notes.md  delegate2stepwithdraw.md  prompts.txt
coverage/: tarpaulin-report.html
dashboard/: README-Configuration.md  config.js  dashboard.js  data-service.js  debug-localStorage.html  index.html  liquidity.html  liquidity.js  pool-creation.html  pool-creation.js  pool-success.html  shared-config.json  state.json  swap.html  swap.js  test-basis-points.html  token-creation.html  token-creation.js  utils.js
docs/: ACCOUNT_ORDERING_POLICY.md  (+16 more)
(+303 files in other folders)
