[package]
name = "fixed-ratio-trading"
version = "0.1.0"
edition = "2021"
description = "Fixed Ratio Trading Smart Contract for Solana"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []

[dependencies]
solana-program = "1.18.26"
borsh = "0.10.3"
thiserror = "1.0"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0", features = ["no-entrypoint"] }
bincode = "1.3"
num-derive = "0.4"
num-traits = "0.2"

[dev-dependencies]
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
serial_test = "3.0"
